// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.Password should render component 1`] = `
<Component
  iconServices={
    <React.Fragment>
      <ForwardRef(styled.div)
        height={24}
        onMouseDown={[Function]}
        theme={Object {}}
        width={24}
      />
    </React.Fragment>
  }
  onChange={[Function]}
  onClick={[Function]}
  size="big"
  type="password"
  value=""
/>
`;

exports[`Input.Password should render component with clearable field, icon and name 1`] = `
<Component
  clearable={true}
  icon={<div />}
  iconServices={
    <React.Fragment>
      <ForwardRef(styled.div)
        height={20}
        onMouseDown={[Function]}
        theme={Object {}}
        width={20}
      />
    </React.Fragment>
  }
  inputName="test"
  label="Введите ваше имя"
  onChange={[Function]}
  onClick={[Function]}
  size="micro"
  type="password"
  value=""
/>
`;

exports[`Input.Password should render component with error status 1`] = `
<Component
  additionalText="Ошибка"
  iconServices={
    <React.Fragment>
      <ForwardRef(styled.div)
        height={24}
        onMouseDown={[Function]}
        theme={Object {}}
        width={24}
      />
    </React.Fragment>
  }
  label=""
  onChange={[Function]}
  onClick={[Function]}
  size="big"
  status="error"
  type="password"
  value=""
/>
`;

exports[`Input.Password should render component with success status 1`] = `
<Component
  additionalText="Успех"
  iconServices={
    <React.Fragment>
      <ForwardRef(styled.div)
        height={24}
        onMouseDown={[Function]}
        theme={Object {}}
        width={24}
      />
    </React.Fragment>
  }
  label="Введите ваше имя"
  onChange={[Function]}
  onClick={[Function]}
  size="big"
  status="success"
  type="password"
  value=""
/>
`;
